# sebfixnet

./: .env.example  .gitignore  README.md  start-local.ps1
.github/workflows/: build-fixinet.yml
admin/: admin.css  admin.js  index.html
app/: .env.production  index.html  package-lock.json  package.json
app/launcher/: FixInet.ez.bat  FixInet.ez.ps1  InetFix.bat  InetFix.ps1  local-api.ps1
app/scripts/: build-installer-py.ps1  build-installer.ps1  create-setup-exe.ps1  download-singbox.ps1  installer.py  package-portable.ps1
app/src/: App.tsx  styles.css  types.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: .gitkeep  icon.icns
app/src-tauri/src/: lib.rs  main.rs  singbox.rs
app/src/components/: AccountScreen.tsx  ActivateScreen.tsx  MainScreen.tsx  ServicesScreen.tsx  TitleBar.tsx
backend/: Dockerfile  admin_routes.py  bot_models.py  config.py  database.py  main.py  requirements.txt  singbox_config.py  telegram_service.py  xray_sync.py  xui_client.py  xui_provision.py
bot/: api_client.py  channel_handler.py  config.py  main.py  messages.py  requirements.txt  support_handler.py  user_store.py
scripts/: deploy_remote.py
server/: deploy.sh  docker-compose.yml  nginx-fixnet-http.conf  nginx-fixnet.conf  setup-nl-server.sh
server/releases/: InetFix-Setup-1.0.0.bat
server/systemd/: fixnet-backend.service  fixnet-bot.service  inetfix-backend.service  inetfix-bot.service
server/xray/: config.json
shared/: services.json
website/: index.html  script.js  styles.css
(+4 files in other folders)
