[package]
name = "inetfix"
version = "1.0.0"
description = "InetFix (By Seb0g1) - Internet connection stabilizer"
authors = ["Seb0g1"]
edition = "2021"

[lib]
name = "inetfix_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["sync"] }
open = "5"
