[package]
name = "fixinet-ez"
version = "1.0.0"
description = "FixInet.ez (By Seb0g1) - Internet connection stabilizer"
authors = ["Seb0g1"]
edition = "2021"

[lib]
name = "fixinet_ez_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
open = "5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
] }
